5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1592_588.log
== SUBMITION (2019-03-27 15:15:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input())
notas_R100 = valor // 100
notas_R50 = valor // 50
notas_R10 = valor // 10

-- EXECUTION TIME:
0.197878
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:17:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input())
notas_R100 = valor // 100
notas_R50 = valor // 50
notas_R10 = valor // 10
print(int(notas_100))
print(int(notas_50))
print(int(notas_10))

-- EXECUTION TIME:
0.135697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/588/main.py", line 8, in <module>
    print(int(notas_100))
NameError: name 'notas_100' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:17:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input())
notas_R100 = valor // 100
notas_R50 = valor // 50
notas_R10 = valor // 10
print(int(notas_100))
print(int(notas_50))
print(int(notas_10))

-- EXECUTION TIME:
0.16235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/588/main.py", line 8, in <module>
    print(int(notas_100))
NameError: name 'notas_100' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:25:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input())
notas_R100 = valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10


print(int(notas_100))
print(int(notas_50))
print(int(notas_10))

-- EXECUTION TIME:
0.137888
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/588/main.py", line 12, in <module>
    print(int(notas_100))
NameError: name 'notas_100' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:26:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input())
notas_R100 = valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10


print(int(notas_100))
print(int(notas_50))
print(int(notas_10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(int(notas_100))
NameError: name 'notas_100' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:27:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input())
notas_R100 = valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10


print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))

-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:27:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input())
notas_R100 = valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10


print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))

-- EXECUTION TIME:
0.186139
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
